--- a/TnTComponents/Carousel/TnTCarousel.razor
+++ b/TnTComponents/Carousel/TnTCarousel.razor
@@ -8,7 +8,7 @@
 <CascadingValue Value="this" IsFixed="true">
     @ChildContent
 
-    <tnt-carousel @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" tnt-auto-play-interval="@AutoPlayInterval"  @ref="Element">
+    <tnt-carousel @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" tnt-auto-play-interval="@AutoPlayInterval" tnt-allow-dragging="@AllowDragging" @ref="Element">
         <TnTImageButton class="tnt-carousel-button tnt-carousel-prev-button" Icon="@MaterialIcon.ChevronLeft" />
         <TnTImageButton class="tnt-carousel-button tnt-carousel-next-button" Icon="@MaterialIcon.ChevronRight" />
         <div class="tnt-carousel-viewport">
