Add styles for underlined TnTNavLink states
Added a new CSS rule for the `a.tnt-nav-link.tnt-underlined` class in `TnTNavLink.razor.scss`.
Set the default color to `colors.$tnt-color-info`.
Defined `:hover` and `:visited` states using `color-mix` to blend colors for improved visual feedback.

--- a/TnTComponents/Anchor/TnTNavLink.razor.scss
+++ b/TnTComponents/Anchor/TnTNavLink.razor.scss
@@ -297,3 +297,15 @@ $on-tint-color: var(--tnt-anchor-on-tint-color);
         }
     }
 }
+
+a.tnt-nav-link.tnt-underlined {
+    color: colors.$tnt-color-info;
+
+    &:hover {
+        color: color-mix(in srgb, colors.$tnt-color-info 20%, colors.$tnt-color-on-surface);
+    }
+
+    &:visited {
+        color: color-mix(in srgb, colors.$tnt-color-info-container 20%, colors.$tnt-color-on-surface);
+    }
+}
