Add :active and :focus styles to .tnt-icon class
Added styles for the :active and :focus states of the
.tnt-icon class, including a nested rule for
.tnt-small-button-layer to set border-radius to 0.
Also removed an extraneous closing brace.

--- a/TnTComponents/Grid/TnTPaginationButtons.razor.scss
+++ b/TnTComponents/Grid/TnTPaginationButtons.razor.scss
@@ -33,6 +33,12 @@
             .tnt-icon {
                 font-size: 18px;
             }
+
+            &:active, &:focus {
+                .tnt-small-button-layer {
+                    border-radius: 0;
+                }
+            }
         }
     }
 }
