--- a/LiveTest/LiveTest.Client/Pages/PaginatedGrid.razor
+++ b/LiveTest/LiveTest.Client/Pages/PaginatedGrid.razor
@@ -25,7 +25,7 @@
         </TnTTemplateColumn>
     </TnTDataGrid>
 </div>
-<TnTComponents.Grid.TnTPaginationButtons PaginationState="@_paginationState" />
+<TnTComponents.TnTPaginationButtons PaginationState="@_paginationState" />
 
 
 <h3>
@@ -44,7 +44,7 @@
         </TnTTemplateColumn>
     </TnTDataGrid>
 </div>
-<TnTComponents.Grid.TnTPaginationButtons PaginationState="@_paginationState" />
+<TnTComponents.TnTPaginationButtons PaginationState="@_paginationState" />
 
 
 @code {
