--- a/LiveTest/LiveTest.Client/Pages/DataGrid.razor
+++ b/LiveTest/LiveTest.Client/Pages/DataGrid.razor
@@ -1,7 +1,72 @@
 ﻿@page "/datagrid"
 @using LiveTest.Client.Components
 @using TnTComponents
-@rendermode InteractiveAuto
-<DataGridComponent />
+@rendermode InteractiveWebAssembly
+
+@if (RendererInfo.IsInteractive) {
+
+	<div style="height: 60vh; overflow-y:scroll">
+		<TnTDataGrid Items="@Items" OnRowClicked="RowClicked" BackgroundColor="TnTColor.SecondaryContainer" TextColor="TnTColor.OnSecondaryContainer" TGridItem="DataGridItem" DataGridAppearance="DataGridAppearance.Stripped | DataGridAppearance.Compact" Resizable="true">
+			<TnTPropertyColumn Property="@(x => x.Column1)" Sortable="true" IsDefaultSortColumn="true" Width="600" />
+			<TnTPropertyColumn Property="@(x => x.Column2)" Sortable="true" TextAlign="TextAlign.Center" IsDefaultSortColumn="true" HeaderAlignment="TextAlign.Left" Width="75" />
+			<TnTPropertyColumn Property="@(x => x.Column3)" Format="MM/yyyy" HeaderAlignment="TextAlign.Right" />
+			<TnTTemplateColumn>
+				<TnTButton Appearance="ButtonAppearance.Text" TextColor="TnTColor.OnSurface" BackgroundColor="TnTColor.Surface" StopPropagation="true" OnClickCallback="@(() => ItemClicked(context))">
+					<MaterialIcon Icon="@MaterialIcon.Edit" />
+					Edit
+				</TnTButton>
+			</TnTTemplateColumn>
+		</TnTDataGrid>
+	</div>
+}
+
+
+@code {
+	[Inject]
+	private ITnTToastService _service { get; set; }
+
+	private int _count;
+
+	private IQueryable<DataGridItem>? Items;
+	private static object _locker = new();
+	private static List<DataGridItem> _items;
+	protected override Task OnInitializedAsync() {
+		lock (_locker) {
+			if (_items == null) {
+				var list = new List<DataGridItem>();
+				foreach (var i in Enumerable.Range(1, 1000)) {
+					list.Add(new DataGridItem() {
+						Column1 = Random.Shared.Next(1, 10),
+						Column2 = Guid.NewGuid().ToString(),
+						Column3 = new DateTime(Random.Shared.Next(1, 10000), Random.Shared.Next(1, 13), Random.Shared.Next(1, 29))
+					});
+				}
+				_items = list;
+			}
+			Items = _items.AsQueryable();
+		}
+
+		return Task.CompletedTask;
+	}
+
+	private async Task RowClicked(DataGridItem item) {
+		await _service.ShowAsync("Row clicked", item.Column1.ToString());
+	}
+
+	private async Task ItemClicked(DataGridItem item) {
+		await _service.ShowAsync("Item clicked", item.Column2);
+	}
+
+	public class DataGridItem {
+
+		public int Column1 { get; set; }
+
+		public string Column2 { get; set; } = default!;
+
+		public DateTime Column3 { get; set; }
+	}
+
+
+}
 
 
