--- a/TnTComponents/Grid/Infrastructure/TnTDataGridBodyRow.razor
+++ b/TnTComponents/Grid/Infrastructure/TnTDataGridBodyRow.razor
@@ -7,7 +7,7 @@
     @onclick="@(Context.RowClickCallback.HasDelegate ? () => Context.RowClickCallback.InvokeAsync(Item) : null!)"
     @key="Context.ItemKey.Invoke(Item)" style="@($"height: {Context.Grid.ItemSize}px")">
     @foreach (var column in Context.Columns) {
-        <TnTDataGridBodyCell Column="@column" Item="@Item" />
+        <TnTDataGridBodyCell TGridItem="@TGridItem" Column="@column" Item="@Item" />
     }
     @if (Context.RowClickCallback.HasDelegate) {
         <TnTRippleEffect />
