Refactor TnTInputRadio value and checked attributes
Refactored the `value` attribute in `TnTInputRadio.razor` to use the new `GetValueAsString()` method for improved readability and reusability. Introduced the `GetToggledTrueValue()` method to dynamically toggle the `checked` attribute value, enabling dynamic behavior. These changes enhance code modularity and maintainability.

--- a/TnTComponents/Form/TnTInputRadio.razor
+++ b/TnTComponents/Form/TnTInputRadio.razor
@@ -18,7 +18,7 @@
            name="@_group.ElementName"
            readonly="@_readOnly"
            disabled="@_disabled"
-           value="@BindConverter.FormatValue(Value?.ToString())"
+           value="@GetValueAsString()"
            checked="@(_group.InternalCurrentValue?.Equals(Value) == true ? GetToggledTrueValue() : null)"
            @onchange="@_group.UpdateValueAsync"
            @onblur="@(_group.InternalEditContext is not null ? (FocusEventArgs args) => { _group.NotifyStateChanged(); } : (FocusEventArgs _) => { })" />
