Improve ripple effect and update grid styles/tests
- Refactored `rippleEffectByIdentifier` initialization in `TnTRippleEffect.razor.js`:
  - Added inline `getCoords` function for cross-browser compatibility.

- Updated `rippleEffect` function in `TnTRippleEffect.razor.js`:
  - Handled special case for `tnt-data-grid-body-row` to use `currentTarget` dimensions.
  - Replaced `event.target` with `target` for dimension calculations.

- Added a new test case in `TnTRippleEffect.test.js`:
  - Verified ripple effect behavior for `mousedown` on child elements inside `tnt-data-grid-body-row`.
  - Mocked `currentTarget` dimensions and validated ripple size.

- Updated SCSS for `TnTDataGridBodyRow`:
  - Commented out `tnt-interactable` mixin.
  - Added styles for `.tnt-interactable:not(.tnt-disabled)` and `.tnt-rippling`.

- Reordered `@foreach` loop in `TnTDataGridHeaderRow.razor`:
  - Ensured header cells render before the placeholder cell.

- Added `width: 100%` to `.tnt-compact` in `TnTDataGrid.razor.scss`.

- Minor cleanup in `TnTTabView.razor.scss`:
  - Removed `height` property for `.tnt-tab-view-button`.

- Non-functional change to `jest` import in `TnTRippleEffect.test.js`.

--- a/TnTComponents/Grid/Infrastructure/TnTDataGridBodyRow.razor.scss
+++ b/TnTComponents/Grid/Infrastructure/TnTDataGridBodyRow.razor.scss
@@ -3,7 +3,24 @@
 @use '../../Styles/_Variables/_colors.scss' as colors;
 
 .tnt-data-grid-body-row {
-    @include interactable.tnt-interactable(dg.$tint-color, null);
+    //@include interactable.tnt-interactable(dg.$tint-color, null);
+    &.tnt-interactable:not(.tnt-disabled) {
+        position: relative;
+        cursor: pointer;
+
+        &:hover, &:active {
+            &:before {
+                background-color: #{dg.$tint-color};
+                opacity: 0.3;
+            }
+        }
+
+        ::deep {
+            .tnt-rippling {
+                background-color: #{dg.$tint-color};
+            }
+        }
+    }
 
     &.tnt-stripped {
         &:nth-child(even) {
