--- a/TnTComponents/Grid/TnTPaginationButtons.razor
+++ b/TnTComponents/Grid/TnTPaginationButtons.razor
@@ -1,7 +1,7 @@
 ﻿@using TnTComponents.Core
 @using TnTComponents.Grid
 @namespace TnTComponents
-@inherits TnTComponentBase
+@inherits TnTDisposableComponentBase
 
 <div @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" @ref="Element">
     @{
